# src/swagger.json
@@ -293,6 +293,44 @@
         }
       }
     },
+    "/jobs/job-with-applicants": {
+      "get": {
+        "summary": "Get all jobs with applicants for Job Provider",
+        "tags": ["Jobs"],
+        "parameters": [
+      {
+        "name": "page",
+        "in": "query",
+        "required": false,
+        "schema": {
+              "type": "integer",
+              "default": 1,
+              "minimum": 1
+            },
+            "description": "Page number (starts from 1)"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "default": 10,
+              "minimum": 1
+            },
+            "description": "Number of items per page"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Jobs with applican fetched successfully"
+          },
+          "404": {
+            "description": "Jobs not found"
+          }
+        }
+      }
+    },
     "/aws/upload": {
       "post": {
         "summary": "Upload a file to AWS S3",
